# anamnesis

./: .codecov.yml  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  longmemeval-baseline.json  rustfmt.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.config/: nextest.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.gjc/_session-019f63ab-9362-7000-adf5-5065f75b047d/: .session-activity.json
.sisyphus/evidence/: task-1-summary.txt  task-1-test-output.txt  task-4-bench-compile.txt  task-4-bench-run.txt
benches/: engine_ops.rs  fidelity_report.rs  fidelity_showcase.rs  graph_crud.rs  ingestion.rs  memory_real.rs  memory_usage.rs  query_spreading.rs  search_breakdown.rs  storage.rs  tick_scaling.rs  vector_similarity.rs
crates/anamnesis/: Cargo.toml  README.md
crates/anamnesis-core/: Cargo.toml
crates/anamnesis-core/src/: edge.rs  id.rs  lib.rs  origin.rs  schema.rs  scope.rs  time.rs
crates/anamnesis-core/tests/: domain_contract.rs
crates/anamnesis-mcp/: Cargo.toml  README.md
crates/anamnesis-mcp/src/: capture.rs  cli.rs  client.rs  config.rs  daemon.rs  dashboard.html  dashboard.rs  dispatch.rs  eval.rs  hook.rs  launcher.rs  main.rs  memory.rs  proto.rs  server.rs  transcript.rs
crates/anamnesis-mcp/src/dispatch/: enrich.rs  extract.rs  graph.rs  mgmt.rs  mod.rs  render.rs  tests.rs
crates/anamnesis-mcp/src/extract/: audit.rs  config.rs  error_log.rs  kick.rs  mod.rs  process.rs  profile.rs  prompt.rs  scan.rs  types.rs  validate.rs  worker.rs
crates/anamnesis-mcp/src/memory/: mgmt.rs  migration.rs  mod.rs  recall.rs  tests.rs
crates/anamnesis-mcp/src/memory/policy/: extraction.rs  mod.rs  recall.rs  schema.rs
crates/anamnesis-mcp/src/static/: 3d-force-graph.min.js
crates/anamnesis-mcp/tests/: cli_migrate_embeddings.rs  hooks_wiring.rs  multi_client_daemon.rs  shadow_extraction.rs  stdio_smoke.rs
crates/anamnesis-mcp/tests/fixtures/: fake-extractor.sh
crates/anamnesis/benches/: engine_ops.rs  graph_crud.rs  ingestion.rs  memory_real.rs  memory_usage.rs  query_spreading.rs  search_breakdown.rs  storage.rs  tick_scaling.rs
crates/anamnesis/benches/eval/: composed_fixtures.rs  download.rs  eval_accuracy.rs  fit_readout.rs  fixtures.rs  pre_ingest.rs  regression.rs  search_latency.rs
crates/anamnesis/benches/eval_common/: locomo_pipeline.rs  provider.rs
crates/anamnesis/benches/eval_common/real_bench/: dataset.rs  embed_cache.rs
crates/anamnesis/benches/eval_common/real_bench/dataset/: dates.rs  locomo.rs  longmemeval.rs
crates/anamnesis/benches/eval_common/real_bench/report/: output.rs
crates/anamnesis/benches/eval_common/real_bench/report/output/: unix.rs
crates/anamnesis/benches/fidelity_common/: scenario.rs
crates/anamnesis/benches/fidelity_common/paradigms/: interference.rs
crates/anamnesis/examples/: custom_embedding.rs  debug_session.rs  reasoning_demo.rs  with_embedding.rs
crates/anamnesis/src/: engine.rs  error.rs  lib.rs
crates/anamnesis/src/api/: mod.rs
crates/anamnesis/src/api/search/: assemble.rs  candidates.rs  fusion.rs  mod.rs  plan.rs  recall.rs
crates/anamnesis/src/embedding/: fastembed.rs  mod.rs
crates/anamnesis/src/graph/: edge.rs  mod.rs  node.rs  schema.rs  scope.rs  types.rs
crates/anamnesis/src/mechanics/: attraction.rs  energy.rs  forgetting.rs  frustration.rs  health.rs  observability.rs  perception.rs  priors.rs  projection.rs  social.rs  topology.rs
crates/anamnesis/src/memory/: manage.rs  mod.rs  view.rs
crates/anamnesis/src/peer/: mod.rs
crates/anamnesis/src/query/: activation.rs  assembly.rs  candidate.rs  identity.rs  mod.rs  rerank.rs  rwr.rs  scoring.rs  temporal.rs  types.rs
crates/anamnesis/src/snapshot/: mod.rs
crates/anamnesis/src/storage/: mod.rs  sqlite.rs
crates/anamnesis/tests/: access_history.rs  access_trace_ordering.rs  adapter_contract.rs  adaptive_packaging.rs  add_partial_write.rs  bitemporal_observation.rs  cognitive_engine.rs  commit_pipeline.rs  conflict_detection.rs  convenience_conversation.rs  convenience_document.rs  convenience_methods.rs  convergence.rs  crash_recovery.rs  crystallize.rs  crystallize_consistency.rs  debug_dynamics_inert.rs  debug_hypothesis.rs  decay_checkpoint.rs  decay_power_law_mode.rs  delete_node_atomicity.rs  edge_bitemporal.rs  edge_leak_idempotent.rs  edge_leakage.rs  edge_source.rs  edge_validity_recall.rs  embedding_migration_storage.rs  engine_link_validation.rs  fallible_snapshot.rs  fastembed_provider.rs  free_id_atomicity.rs  frustration_perception.rs  graph_events.rs  graph_health.rs  health_report.rs  ingest_dedup.rs  ingest_result_enum.rs  integration.rs  integration_v050.rs  legacy_db_tick_recall.rs  (+52 more)
docs/: README.md  architecture.md  cognitive_science_synthesis.md  identity_memory_integration.md  vision.md
examples/: custom_embedding.rs  debug_session.rs  with_embedding.rs
plugin/: .codex-mcp.json  .mcp.json  README.md
scripts/: hook-battery.sh  plot_fidelity.py  plot_showcase.py
src/: engine.rs  error.rs  lib.rs
src/api/: mod.rs
tests/: access_history.rs  adaptive_packaging.rs  bitemporal_observation.rs  cognitive_engine.rs  cognitive_fidelity.rs  commit_pipeline.rs  config_enums.rs  config_model_routing.rs  conflict_detection.rs  convenience_conversation.rs  convenience_document.rs  convenience_methods.rs  convenience_schedule.rs  convergence.rs  crystallize.rs  crystallize_consistency.rs  debug_dynamics_inert.rs  debug_hypothesis.rs  decay_checkpoint.rs  decay_model_default.rs  decay_power_law_mode.rs  diag_cosine_rank.rs  edge_bitemporal.rs  edge_leakage.rs  edge_source.rs  edge_validity_recall.rs  embedding_provider.rs  engine_link_validation.rs  engine_peer_api.rs  fact_at_supersedes.rs  force_composition.rs  force_trait.rs  forgetting_curve.rs  frustration_perception.rs  graph_events.rs  graph_health.rs  graph_test.rs  health_report.rs  hopfield_energy.rs  ingest_dedup.rs  (+73 more)
(+410 files in other folders)
