[package]
name = "anamnesis"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Cognitive graph engine for LLMs — knowledge with attraction, gravity, perception, and forgetting"
license = "MIT"
repository = "https://github.com/INONONO66/anamnesis"

[lib]
name = "anamnesis"
crate-type = ["lib"]

[dependencies]
# Zero external deps for core — add only as needed

[dev-dependencies]
proptest = "1.6"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ingestion"
harness = false

[[bench]]
name = "graph_crud"
harness = false

[[bench]]
name = "storage"
harness = false

[[bench]]
name = "memory_usage"
harness = false

[[bench]]
name = "engine_ops"
harness = false

[[bench]]
name = "longmemeval-loader"
path = "benches/longmemeval/loader.rs"
harness = false

[[bench]]
name = "longmemeval-baseline"
path = "benches/longmemeval/baseline.rs"
harness = false

[profile.bench]
debug = true
