[package]
name = "anamnesis"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Cognitive graph engine for LLMs — knowledge with attraction, gravity, perception, and forgetting"
license = "MIT"
repository = "https://github.com/INONONO66/anamnesis"

[lib]
name = "anamnesis"
crate-type = ["lib"]

[features]
embed = ["dep:fastembed"]

[dependencies]
# Zero external deps for core — add only as needed
fastembed = { version = "4", optional = true }

[dev-dependencies]
proptest = "1.6"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ingestion"
harness = false

[[bench]]
name = "graph_crud"
harness = false

[[bench]]
name = "storage"
harness = false

[[bench]]
name = "memory_usage"
harness = false

[[bench]]
name = "engine_ops"
harness = false

[[bench]]
name = "longmemeval-loader"
path = "benches/longmemeval/loader.rs"
harness = false

[[bench]]
name = "longmemeval-baseline"
path = "benches/longmemeval/baseline.rs"
harness = false

[[bench]]
name = "longmemeval-indexed"
path = "benches/longmemeval/indexed.rs"
harness = false

[[bench]]
name = "longmemeval-unified-search"
path = "benches/longmemeval/unified-search.rs"
harness = false

[[bench]]
name = "longmemeval-ablation"
path = "benches/longmemeval/ablation.rs"
harness = false

[[bench]]
name = "search_latency"
path = "benches/eval/search_latency.rs"
harness = false

[[test]]
name = "longmemeval-judge"
path = "benches/longmemeval/judge.rs"

[[test]]
name = "eval_golden"
path = "benches/eval/golden.rs"

[profile.bench]
debug = true
