[package]
name = "anamnesis"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Cognitive graph engine for LLMs — knowledge with attraction, gravity, perception, and forgetting"
license = "MIT"
repository = "https://github.com/INONONO66/anamnesis"

[lib]
name = "anamnesis"
crate-type = ["lib"]

[features]
embed = ["dep:fastembed"]
sqlite = ["dep:rusqlite"]
demo = ["tokio", "reqwest", "clap", "rustyline", "serde", "serde_json", "sqlite", "embed"]

[dependencies]
# Zero external deps for core — add only as needed
fastembed = { version = "4", optional = true }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
rustyline = { version = "14", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
proptest = "1.6"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bin]]
name = "anamnesis-demo"
path = "src/bin/demo/main.rs"
required-features = ["demo"]

[[bench]]
name = "ingestion"
harness = false

[[bench]]
name = "graph_crud"
harness = false

[[bench]]
name = "storage"
harness = false

[[bench]]
name = "memory_usage"
harness = false

[[bench]]
name = "engine_ops"
harness = false

[[bench]]
name = "longmemeval-loader"
path = "benches/longmemeval/loader.rs"
harness = false

[[bench]]
name = "longmemeval-baseline"
path = "benches/longmemeval/baseline.rs"
harness = false

[[bench]]
name = "longmemeval-indexed"
path = "benches/longmemeval/indexed.rs"
harness = false

[[bench]]
name = "longmemeval-unified-search"
path = "benches/longmemeval/unified-search.rs"
harness = false

[[bench]]
name = "longmemeval-ablation"
path = "benches/longmemeval/ablation.rs"
harness = false

[[bench]]
name = "search_latency"
path = "benches/eval/search_latency.rs"
harness = false

[[bench]]
name = "query_spreading"
harness = false

[[test]]
name = "longmemeval-judge"
path = "benches/longmemeval/judge.rs"

[[test]]
name = "eval_golden"
path = "benches/eval/golden.rs"

[profile.bench]
debug = true
