[package]
name = "anamnesis-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Stable core schema vocabulary for Anamnesis memory graphs"
license = "MIT"
repository = "https://github.com/INONONO66/anamnesis"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"
