[package]
name = "anamnesis-mcp"
version = "0.16.1"
edition = "2024"
# Workspace MSRV. 1.88 is forced by this crate's rmcp/schemars dep tree
# (darling 0.23 requires rustc 1.88); the workspace tracks a single MSRV.
rust-version = "1.88"
license = "MIT"
description = "Anamnesis cognitive-memory MCP server (stdio) and one-shot CLI"
repository = "https://github.com/INONONO66/anamnesis"
publish = false

[[bin]]
name = "anamnesis"
path = "src/main.rs"

[dependencies]
anamnesis = { path = "../anamnesis", package = "anamnesis-engine", features = ["embed"] }
rmcp = { version = "1.7", features = [
    "server",
    # `client` drives the CLI one-shots: they connect to the shared daemon over
    # the Unix socket and issue a single tools/call as MCP clients.
    "client",
    "macros",
    "transport-io",
    "transport-async-rw",
] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "net",
    "time",
    "io-std",
    "io-util",
] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
fs4 = "1.1.0"
# `setsid()` in the detached-daemon spawn (launcher.rs pre_exec hook).
libc = "0.2"
# Stable, cross-version turn dedup key for capture (must survive daemon restarts).
sha2 = "0.10"
tiny_http = "0.12.0"
# Community detection (`cluster` in the /api/graph enrichment) — core Leiden
# algorithm only; no petgraph/gryf graph-library adapters, no CLI, no rayon.
leiden-rs = { version = "0.8.1", default-features = false }

[dev-dependencies]
tempfile = "3"
# The rmcp `client`/`transport-async-rw` features the lifecycle + e2e tests rely
# on (drive the daemon over the Unix socket: initialize + tools/list, then
# disconnect) are now enabled on the main `rmcp` dependency above, since the CLI
# one-shots act as daemon clients in production too.
